fix for board images on mobile

--- a/src/app/wp.scss
+++ b/src/app/wp.scss
@@ -14,9 +14,12 @@ $max-image-height: 34rem;
 
   // for mobile officers, 2 per row
   .officers {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem; // optional, for spacing
     & > .wp-block-column {
-      max-width: 45vw !important;
-      flex: 1 1 45vw !important;
+      max-width: 42vw !important;
+      flex: 1 1 42vw !important;
     }
   }
 }
@@ -190,10 +193,10 @@ iframe {
 
 .officers {
   justify-content: center;
-  // max-height: 20rem;
+  margin-bottom: 1rem;
   & > .wp-block-column {
     // height: 100%;
-    min-height: 20rem;
+    min-height: min(40vh, 20rem);
     max-width: 13.5rem;
     flex: 1 1 13.5rem;
     display: flex;
@@ -208,10 +211,11 @@ iframe {
 .officers figure.wp-block-gallery {
   height: 100%;
   max-width: 13.5rem;
+  margin: 0;
+  padding: 0;
   & > img {
     height: 100%;
     object-fit: cover;
-    // max-height: 20rem;
   }
 }
 
